Bug 187265 - Advanced search crashes if a selected album has been deleted
Summary: Advanced search crashes if a selected album has been deleted
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Advanced (other bugs)
Version First Reported In: 0.10.0
Platform: Ubuntu Unspecified
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-15 23:42 UTC by admajer
Modified: 2017-08-18 06:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description admajer 2009-03-15 23:42:09 UTC
Version:           0.10.0-rc2 (using KDE 4.2.1)
Installed from:    Ubuntu Packages

Search photos by making "Search tab" => "Advanced Search" => "File, Albums, Tags" => "Search pictures located in" => select an album having sub-albums with photos. The search returns all photos in the sub-albums.
Select all photos and move them to a new album.
After the move process is finished, go to the Albums view and delete the original album (and its sub-albums).
Go back to the Search tab.
Clicking on "Advanced Search" again crashes the program.
I suppose that the Advanced Search form crashes when the file chooser combo tries to point to the deleted album.
The above bug cannot be reproduced by starting with just an empty album.
Sorry, no debug info due to the packaging of Ubuntu.
Comment 1 Marcel Wiesweg 2009-04-12 21:40:51 UTC
SVN commit 952890 by mwiesweg:

Remove pointer from checked albums hash when album is deleted.

BUG: 187265

 M  +2 -1      NEWS  
 M  +12 -0     libs/models/abstractalbummodel.cpp  
 M  +3 -0      libs/models/abstractalbummodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952890