Remove pointer from checked albums hash when album is deleted.

BUG: 187265

svn path=/trunk/extragear/graphics/digikam/; revision=952890