libs/models/abstractalbummodel.h
@@ -295,6 +295,9 @@ protected:
     virtual Qt::ItemFlags flags(const QModelIndex &index) const;
     virtual bool setData(const QModelIndex &index, const QVariant &value, int role = Qt::EditRole );
 
+    virtual void albumCleared(Album *album);
+    virtual void allAlbumsCleared();
+
 private:
 
     Qt::ItemFlags                 m_extraFlags;
